# SRE-agent

./: .env.example  .gitignore  .gitmodules  README.md  SRE-ReAct-agent-fetch-prev-incidents.ipynb  SRE-ReAct-agent-mitigation-plan.ipynb  SRE-ReAct-agent.ipynb  SRE-agent.ipynb  pyproject.toml
Results/: report-explorer.html  sre-agent-missconf-28102025.json
Results/20251119-plain-ReAct/: 2025-11-19_21-33-12_Plain-React-P2-B7---Hotel-Reservation---Port-missmatch-geo-(20251119-plain-ReAct).json  2025-11-19_21-38-43_Plain-React-P3-B7---Hotel-Reservation---Port-missmatch-geo-(20251119-plain-ReAct).json  2025-11-19_21-43-07_Plain-React-P5-B7---Hotel-Reservation---Port-missmatch-geo-(20251119-plain-ReAct).json  2025-11-19_21-53-59_Plain-React-P2-B7---Hotel-Reservation---Network-delay-(20251119-plain-ReAct).json  2025-11-19_22-02-13_Plain-React-P3-B7---Hotel-Reservation---Network-delay-(20251119-plain-ReAct).json  2025-11-19_22-12-13_Plain-React-P5-B7---Hotel-Reservation---Network-delay-(20251119-plain-ReAct).json  2025-11-19_22-19-50_Plain-React-P2-B7---Hotel-Reservation---Network-loss-(20251119-plain-ReAct).json  2025-11-19_22-27-06_Plain-React-P3-B7---Hotel-Reservation---Network-loss-(20251119-plain-ReAct).json  2025-11-19_22-35-12_Plain-React-P5-B7---Hotel-Reservation---Network-loss-(20251119-plain-ReAct).json  2025-11-19_22-44-13_Plain-React-P2-B7---Hotel-Reservation---Pod-failure-(20251119-plain-ReAct).json  2025-11-19_22-49-28_Plain-React-P3-B7---Hotel-Reservation---Pod-failure-(20251119-plain-ReAct).json  2025-11-19_22-55-27_Plain-React-P5-B7---Hotel-Reservation---Pod-failure-(20251119-plain-ReAct).json
Results/aggregate-results/: 2025-11-20_13-14-48_Plain-React-P5-B7---Hotel-Reservation---Container-Kill-(hotel-res-full-set).json  2025-11-20_14-49-18_C---Plain-React-P5-B7---Hotel-Reservation---Network-loss-(hotel-res-full-set).json  (+78 more)
Studio/: langgraph.json  sre-agent.py
archive/: README.md  sre-agent-legacy.py
graphs/: datagraph.ipynb  datagraph.py  hotel-reservation-datagraph.txt
mcp-server/: JaegerAPI.py  PrometheusAPI.py  logAPI.py  mcp-server.py
plots/: plot-results.ipynb  results.json
registry/: REGISTRY_SETUP.md  registry-config.yml  setup-registry.sh
results/: 2025-08-28_11-09-15.md  2025-09-08_12-03-09.md  20250818_115034.txt  20250818_122428.txt  20250818_161534.txt  20250818_162746.txt  20250820_100500.txt  20250820_102946.txt  20250820_104233.txt
sre-agent/: README.md  agent-images.ipynb  automate_cluster_creation.py  automated_experiment.py  graph.py  langgraph.json  launch-experiment.py  launch_experiment.py
studio/: langgraph.json  react_sre_strctured.py  react_sre_strctured_mitigation.py
(+581 files in other folders)
