[project]
name = "sre-agent"
version = "0.1.0"
description = "Autonomous agent for Kubernetes incident detection, diagnosis, and mitigation using LLMs and modular workflows. Integrates LangChain, LangGraph, and AIOpsLab to enable automated SRE tasks in cloud-native environments."
authors = [
    {name = "martinimarcello00",email = "martinimarcello00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph-cli[inmem] (>=0.3.8,<0.4.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "langchain-mcp-adapters (>=0.1.9,<0.2.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
